<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.jbellis</groupId>
  <artifactId>jvector</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <!-- Project Metadata setup -->
  <name>jvector</name>
  <description>JVector: the most advanced embedded vector search engine</description>
  <url>https://github.com/jbellis/jvector</url>
  <scm>
    <connection>scm:git:git://github.com/jbellis/jvector.git</connection>
    <developerConnection>scm:git:git@github.com:jbellis/jvector.git</developerConnection>
    <url>http://github.com/jbellis/jvector/tree/main/</url>
  </scm>
  <issueManagement>
    <system>github</system>
    <url>http://github.com/jbellis/jvector/issues</url>
  </issueManagement>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <!-- Build property abstractions: versions, etc -->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.boundary</groupId>
      <artifactId>high-scale-lib</artifactId>
      <version>1.0.6</version>
    </dependency>
    <dependency>
      <groupId>io.jhdf</groupId>
      <artifactId>jhdf</artifactId>
      <version>0.6.10</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.9.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.carrotsearch.randomizedtesting</groupId>
      <artifactId>randomizedtesting-runner</artifactId>
      <version>2.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-core</artifactId>
      <version>1.35</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-generator-annprocess</artifactId>
      <version>1.35</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>20</source>
          <target>20</target>
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.vector</arg>
          </compilerArgs>
        </configuration>
        <executions>
          <execution>
            <id>jdk20</id>
            <configuration>
              <source>20</source>
              <target>20</target>
              <enablePreview>true</enablePreview>
              <compilerArgs>
                <arg>--add-modules</arg>
                <arg>jdk.incubator.vector</arg>
              </compilerArgs>
              <outputDirectory>${project.build.outputDirectory}_jdk20</outputDirectory>
            </configuration>
          </execution>
          <execution>
            <id>jdk11</id>
            <configuration>
              <excludes>
                <exclude>com/github/jbellis/jvector/example/Bench.java</exclude>
              </excludes>
              <source>11</source>
              <target>11</target>
              <compilerArgs>
                <arg>--add-modules</arg>
                <arg>jdk.incubator.vector</arg>
              </compilerArgs>
              <outputDirectory>${project.build.outputDirectory}_jdk11</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>jar-jdk11</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <classifier>jdk11</classifier>
              <classesDirectory>${project.build.outputDirectory}_jdk11</classesDirectory>
            </configuration>
          </execution>
          <execution>
            <id>jar-jdk20</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <classifier>jdk20</classifier>
              <classesDirectory>${project.build.outputDirectory}_jdk20</classesDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>sift</id>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>${java.home}/bin/java</executable>
              <arguments>
                <argument>-classpath</argument>
                <classpath/>
                <argument>--add-modules=jdk.incubator.vector</argument>
                <argument>-ea</argument>
                <argument>com.github.jbellis.jvector.example.SiftSmall</argument>
              </arguments>
            </configuration>
          </execution>
          <execution>
            <id>bench</id>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>${java.home}/bin/java</executable>
              <arguments>
                <argument>-classpath</argument>
                <classpath/>
                <argument>--add-modules=jdk.incubator.vector</argument>
                <argument>-Xmx32G</argument>
                <argument>-ea</argument>
                <argument>com.github.jbellis.jvector.example.Bench</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
